# openbao-pki-controller

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  pod.yaml
.github/actions/setup/: action.yml
.github/workflows/: release.yaml  test.yaml
src/: ca_certificate.rs  controller.rs  error.rs  intermediate_ca.rs  main.rs  utils.rs
